--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 600px;
-    margin: 0 auto; /* 수평 가운데 정렬 */
+    margin: auto; /* 수평 가운데 정렬 */
     margin-bottom: 20px; /* 아래쪽 여백 */
     display: flex;
     justify-content: center;
