--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70%;
+    min-height: 100%;
 }
 
 .container {
